// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numeric-input/NumericInput renders with custom className 1`] = `
.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
  width: 10px;
  right: 0px;
  bottom: 22%;
}

.emotion-1 {
  display: block;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:active svg * {
  fill: #0696d7;
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-8 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-7 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-6 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -moz-appearance: textfield;
}

.emotion-6::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::selection {
  background-color: rgba(128,128,128,0.2);
}

.emotion-6::-webkit-inner-spin-button {
  display: none;
}

.emotion-6::-ms-clear {
  display: none;
}

.emotion-6:focus {
  -moz-appearance: textfield;
}

.emotion-6:hover {
  -moz-appearance: textfield;
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="emotion-5 custom__spinner-wrapper"
  >
    <div
      className="emotion-4 custom__box-wrapper"
    >
      <span
        className="emotion-1 custom__spinner"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="custom__spinner-icon-up emotion-0"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
          />
        </svg>
      </span>
      <span
        className="emotion-1 custom__spinner"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="custom__spinner-icon-down emotion-2"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="emotion-8 custom"
  >
    <input
      className="emotion-6 custom__input"
      disabled={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      step={undefined}
      type="number"
      value="0"
    />
    <div
      className="emotion-7 custom__halo"
    />
  </div>
</div>
`;

exports[`numeric-input/NumericInput renders with custom stylesheet 1`] = `
.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
  width: 10px;
  right: 0px;
  bottom: 22%;
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-10 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-8 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-6 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -moz-appearance: textfield;
}

.emotion-6::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::selection {
  background-color: rgba(128,128,128,0.2);
}

.emotion-6::-webkit-inner-spin-button {
  display: none;
}

.emotion-6::-ms-clear {
  display: none;
}

.emotion-6:focus {
  -moz-appearance: textfield;
}

.emotion-6:hover {
  -moz-appearance: textfield;
}

.emotion-1 {
  display: block;
  background-color: pink;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:active svg * {
  fill: #0696d7;
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-0"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
          />
        </svg>
      </span>
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-2"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="emotion-10"
  >
    <input
      className="emotion-6 emotion-4__input"
      disabled={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      step={undefined}
      type="number"
      value="0"
    />
    <div
      className="emotion-8 emotion-4__halo"
    />
  </div>
</div>
`;

exports[`numeric-input/NumericInput renders with default value 1`] = `
.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
  width: 10px;
  right: 0px;
  bottom: 22%;
}

.emotion-1 {
  display: block;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:active svg * {
  fill: #0696d7;
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-10 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-8 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-6 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -moz-appearance: textfield;
}

.emotion-6::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::selection {
  background-color: rgba(128,128,128,0.2);
}

.emotion-6::-webkit-inner-spin-button {
  display: none;
}

.emotion-6::-ms-clear {
  display: none;
}

.emotion-6:focus {
  -moz-appearance: textfield;
}

.emotion-6:hover {
  -moz-appearance: textfield;
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-0"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
          />
        </svg>
      </span>
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-2"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="emotion-10"
  >
    <input
      className="emotion-6 emotion-4__input"
      disabled={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      step={undefined}
      type="number"
      value="10"
    />
    <div
      className="emotion-8 emotion-4__halo"
    />
  </div>
</div>
`;

exports[`numeric-input/NumericInput renders with disabled 1`] = `
.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-6 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -moz-appearance: textfield;
}

.emotion-6::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::selection {
  background-color: rgba(128,128,128,0.2);
}

.emotion-6::-webkit-inner-spin-button {
  display: none;
}

.emotion-6::-ms-clear {
  display: none;
}

.emotion-6:focus {
  -moz-appearance: textfield;
}

.emotion-6:hover {
  -moz-appearance: textfield;
}

.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: default;
  width: 10px;
  right: 0px;
  bottom: 22%;
}

.emotion-4 {
  opacity: 0.4;
}

.emotion-1 {
  display: block;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:active svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-10 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
  opacity: 0.4;
}

.emotion-8 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-0"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
          />
        </svg>
      </span>
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-2"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="emotion-10"
  >
    <input
      className="emotion-6 emotion-7"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      step={undefined}
      type="number"
      value="0"
    />
    <div
      className="emotion-8 emotion-9"
    />
  </div>
</div>
`;

exports[`numeric-input/NumericInput renders with variant 1`] = `
.emotion-1 {
  display: block;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:active svg * {
  fill: #0696d7;
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-8 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
  width: 35px;
  right: 0px;
  height: 100%;
}

.emotion-4 {
  z-index: -2;
  border-left-style: solid;
  border-left-color: rgba(60,60,60,0.1);
  border-left-width: 1px;
  margin-top: 1px;
  margin-bottom: 1px;
  margin-right: 1px;
  height: 34px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: rgba(128,128,128,0.2);
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.2);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-6 {
  background-color: #ffffff;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
  padding-left: 12px;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -moz-appearance: textfield;
}

.emotion-6::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::selection {
  background-color: rgba(128,128,128,0.2);
}

.emotion-6::-webkit-inner-spin-button {
  display: none;
}

.emotion-6::-ms-clear {
  display: none;
}

.emotion-6:focus {
  -moz-appearance: textfield;
}

.emotion-6:hover {
  -moz-appearance: textfield;
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-0"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
          />
        </svg>
      </span>
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-2"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="emotion-10"
  >
    <input
      className="emotion-6 emotion-7"
      disabled={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      step={undefined}
      type="number"
      value="0"
    />
    <div
      className="emotion-8 emotion-9"
    />
  </div>
</div>
`;

exports[`numeric-input/NumericInput renders without props 1`] = `
.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
  line-height: 10px;
  cursor: pointer;
  width: 10px;
  right: 0px;
  bottom: 22%;
}

.emotion-1 {
  display: block;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1 svg * {
  fill: rgba(102,102,102,0.7);
}

.emotion-1:active svg * {
  fill: #0696d7;
}

.emotion-0 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-2 {
  fill: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-10 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-8 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-6 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -moz-appearance: textfield;
}

.emotion-6::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-6::selection {
  background-color: rgba(128,128,128,0.2);
}

.emotion-6::-webkit-inner-spin-button {
  display: none;
}

.emotion-6::-ms-clear {
  display: none;
}

.emotion-6:focus {
  -moz-appearance: textfield;
}

.emotion-6:hover {
  -moz-appearance: textfield;
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-4"
    >
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-0"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 6.78a.75.75 0 0 1-1.06 0L5 4.13 2.35 6.78a.75.75 0 0 1-1.06 0 .74.74 0 0 1 0-1.06l3.36-3.36a.5.5 0 0 1 .7 0l3.36 3.36a.74.74 0 0 1 0 1.06z"
          />
        </svg>
      </span>
      <span
        className="emotion-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          className="emotion-2"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="emotion-10"
  >
    <input
      className="emotion-6 emotion-4__input"
      disabled={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      step={undefined}
      type="number"
      value="0"
    />
    <div
      className="emotion-8 emotion-4__halo"
    />
  </div>
</div>
`;
